--- a/client_ReactJs/src/user/sign.css
+++ b/client_ReactJs/src/user/sign.css
@@ -54,12 +54,13 @@ body{
     background-clip: border-box;
     border: 0 solid rgba(0,0,0,.125);
     border-radius: .25rem;
+    height: 100%;
 }
 
 .card-body {
     flex: 1 1 auto;
     min-height: 1px;
-    padding: 1rem;
+    /* padding: 1rem; */
 }
 
 .gutters-sm {
